--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,15 @@
 <section>
-  <h2>Gallery</h2>
+  <div class="container">
+    <h2>Gallery</h2>
+    <form class="search-form js-search-form">
+      <input
+        class="search-input"
+        type="text"
+        name="search"
+        placeholder="search..."
+      />
+      <button class="search-btn" type="submit">Search</button>
+    </form>
+    <ul class="gallery js-gallery"></ul>
+  </div>
 </section>
