--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,4 +1,3 @@
-
 .search-form {
   display: flex;
   width: 600px;
@@ -6,7 +5,7 @@
   margin-bottom: 40px;
 }
 
-.search-input{
+.search-input {
   height: 40px;
   flex-grow: 1;
   font-size: 18px;
@@ -15,7 +14,7 @@
   border-radius: 6px;
 }
 
-.search-btn{
+.search-btn {
   font-size: 14px;
   padding: 10px 20px;
   background-color: #2ecc71;
@@ -25,7 +24,6 @@
   cursor: pointer;
   margin-left: 10px;
   border-radius: 6px;
-  
 }
 
 .gallery {
@@ -39,3 +37,62 @@
   height: 400px;
 }
 
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+  margin: 0 auto;
+  margin-top: 40%;
+}
+.loader::before,
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #303030;
+  animation: prixClipFix 2s linear infinite;
+}
+.loader::after {
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #ff3d00;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
