--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -11,5 +11,6 @@
       <button class="search-btn" type="submit">Search</button>
     </form>
     <ul class="gallery js-gallery"></ul>
+    <p class="loader is-hidden"></p>
   </div>
 </section>
