--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -30,6 +30,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  margin-bottom: 40px;
 }
 
 .gallery-item {
@@ -46,6 +47,7 @@
   margin: 0 auto;
   margin-top: 40%;
 }
+
 .loader::before,
 .loader::after {
   content: '';
@@ -56,6 +58,7 @@
   border: 5px solid #303030;
   animation: prixClipFix 2s linear infinite;
 }
+
 .loader::after {
   transform: rotate3d(90, 90, 0, 180deg);
   border-color: #ff3d00;
@@ -65,6 +68,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -74,9 +78,11 @@
   0% {
     clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
   }
+
   50% {
     clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
   }
+
   75%,
   100% {
     clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
@@ -95,4 +101,22 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.loadmore-btn {
+  font-size: 14px;
+  padding: 10px 20px;
+  background-color: #2222d5;
+  color: white;
+  border: none;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  border-radius: 6px;
+}
+
+.btn-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
