--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,15 +2,14 @@
   <div class="container">
     <h2>Gallery</h2>
     <form class="search-form js-search-form">
-      <input
-        class="search-input"
-        type="text"
-        name="search"
-        placeholder="search..."
-      />
+      <input class="search-input" type="text" name="search" placeholder="search..." />
       <button class="search-btn" type="submit">Search</button>
     </form>
     <ul class="gallery js-gallery"></ul>
     <p class="loader is-hidden"></p>
+    <div class="btn-wrapper js-btn-wrapper is-hidden">
+      <button type="button" class="loadmore-btn">Load more...</button>
+    </div>
   </div>
+
 </section>
